# pyobserve

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: producer.py  producer.ttl  show-producer-classes.py
jupiterli/: cli.py  config.py
jupiterli/ttl/: jli-shacl.ttl
pyobserve/: cli.py  plots.py  plotter_loop.py
