[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jupiterli"
version = "0.1.1"
dependencies = [
    "redis",
    "nicegui",
    "plotly",
    "rdflib",
    "pyshacl"
]

[project.scripts]
jupiterli = "jupiterli.cli:main"

[tool.setuptools.packages.find]
include = ["jupiterli*"]
